# simple_task_manager

./: Cargo.toml  README.md  dfx.json  did.sh  package-lock.json  package.json
src/simple_task_manager_backend/: Cargo.toml  simple_task_manager_backend.did
src/simple_task_manager_backend/src/: lib.rs
