[package]
name = "simple_task_manager_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.3"
ic-cdk-timers = "0.6" # Feel free to remove this dependency if you don't need timers
serde = "1.0.196"
serde_json = "1.0.113"
serde_derive = "1.0.196"
ic-cdk = "0.12.1"
candid_derive = "0.6.5"
ic-stable-structures = "0.6.2"
